improvement: multi customer group selection in balance list report

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -271,187 +271,220 @@
 </form>
 {/if}
 {if $printmenu=="finances"}
-<FORM method="post" name="printbalancelist" id="printbalancelist" action="?m=print&type=balancelist" target="_blank">
-<input type="hidden" name="disposition" value="print">
-<INPUT type="submit" class="hiddenbtn">
-<TABLE class="lmsbox">
-    <COLGROUP>
-        <COL style="width: 1%;">
-        <COL style="width: 99%;">
-    </COLGROUP>
-    <THEAD>
-	<TR>
-		<TH scope="col">
-		    <IMG src="img/money.gif" alt="">
-		</TH>
-		<TH  scope="col" class="bold nobr">
-		    {trans("Network Balance Sheet")}
-		</TH>
-	</TR>
-    </THEAD>
-    <TBODY>
-	<TR>
-		<TD class="container" width="100%" colspan="2">
-			<TABLE width="100%">
-				<TR>
-					<TD style="width: 1%;" class="nobr">
-					    <TABLE cellpadding="3">
-					        <TR>
-					    	    <TD style="width: 1%;">
-							<IMG src="img/users.gif" alt="">
-						    </TD>
-						    <TD style="width: 1%;" class="bold nobr">
-						        {trans("User:")}
-						    </TD>
-						    <TD style="width: 98%;">
-						        <SELECT size="1" name="user" {tip text="You can select user to limit results"}>
-						    	    <OPTION value="">{trans("— all users —")}</OPTION>
-							    {section name="users" loop=$users}
-							    <OPTION value="{$users[users].id}">{$users[users].name|truncate:40:"&hellip;":true}</OPTION>
-							    {/section}
-					    	    </SELECT>
-						</TR>
-						<TR>
-						    <TD style="width: 1%;">
-							<IMG src="img/network.gif" alt="">
-						    </TD>
-						    <TD style="width: 1%;" class="bold nobr">
-							{trans("Network:")}
-						    </TD>
-						    <TD style="width: 98%;">
-							<SELECT size="1" name="network" {tip text="Select network"}>
-							    <OPTION value="0" SELECTED>{trans("— all networks —")}</OPTION>
-							    {section name="networks" loop=$networks}
-							    <OPTION value="{$networks[networks].id}">{$networks[networks].name|truncate:40:"&hellip;":true}</OPTION>
-							    {/section}
-							</SELECT>
-						    </TD>
-						</TR>
-						<TR>
-						    <TD style="width: 1%;">
-							<IMG src="img/division.gif" alt="">
-						    </TD>
-						    <TD style="width: 1%;" class="bold nobr">
-							{trans("Division")}:
-						    </TD>
-						    <TD style="width: 98%;" class="nobr">
-							<SELECT size="1" name="division" {tip text="Select division"}>
-								<OPTION value="0">{trans("— all —")}</OPTION>
-								{foreach $divisions as $item}
-									<OPTION value="{$item.id}">{$item.label|escape}</OPTION>
-								{/foreach}
-							</SELECT>
-						    </TD>
-						</TR>
-						<TR>
-						    <TD style="width: 1%;">
-							<IMG src="img/group.gif" alt="">
-						    </TD>
-						    <TD style="width: 1%;" class="bold nobr">
-							{trans("Group:")}
-						    </TD>
-						    <TD style="width: 98%;">
-							<SELECT size="1" name="customergroup" {tip text="Select group"}>
-							    <OPTION value="0" SELECTED>{trans("— all groups —")}</OPTION>
-							    {section name="customergroups" loop=$customergroups}
-							    <OPTION value="{$customergroups[customergroups].id}">{$customergroups[customergroups].name|truncate:40:"&hellip;":true}</OPTION>
-							    {/section}
-							</SELECT>
-						    </TD>
-						</TR>
-					    </TABLE>
-					</TD>
-					<TD style="width: 1%;" class="nobr">
-					    <TABLE>
-						<TR>
-						    <TD style="width: 1%;">
-							<IMG src="img/money.gif" alt="">
-						    </TD>
-						    <TD style="width: 1%;" class="bold nobr">
-							{trans("Transaction type:")}
-						    </TD>
-							<TD style="width: 98%;" class="multiselect">
-								<SELECT name="types[]" class="lms-ui-multiselect" {tip text="Select transaction type"} multiple data-default-value="{trans("— all types —")}">
-									<OPTION value="1">{trans("Liability")}</OPTION>
-									<OPTION value="2">{trans("Income")}</OPTION>
-									<OPTION value="3">{trans("Expense")}</OPTION>
-								</SELECT>
-							</TD>
-						</TR>
-						<TR>
-						    <TD style="width: 1%;">
-						    	<IMG src="img/print.gif" alt="">
-						    </TD>
-						    <TD style="width: 1%;" class="bold nobr">
-                        				{trans("Documents:")}
-                        			    </TD>
-                        			    <TD style="width: 98%;">
-                        				<SELECT size="1" name="docs" {tip text="Select transaction type"}>
-                                			    <OPTION value="">{trans("— all —")}</OPTION>
-                            				    <OPTION value="documented">{trans("with document")}</OPTION>
-                            				    <OPTION value="notdocumented">{trans("without document")}</OPTION>
-                        				</SELECT>
-                        			    </TD>
-                    				</TR>
-						<TR>
-						    <TD style="width: 1%;">
-						    	<IMG src="img/isource.gif" alt="">
-						    </TD>
-						    <TD style="width: 1%;" class="bold nobr">
-                        				{trans("Source:")}
-                        			    </TD>
-                        			    <TD style="width: 98%;">
-							<SELECT size="1" name="source" {tip text="You can select import source to limit results"}>
-							<OPTION value="0">{trans("— all sources —")}</OPTION>
-							<OPTION value="-1">{trans("— none —")}</OPTION>
-							{foreach from=$sourcelist item=item}
-							<OPTION value="{$item.id}">{$item.name}</OPTION>
-							{/foreach}
-							</SELECT>
-						    </TD>
-						</TR>
-					    </TABLE>
-					</TD>
-					<TD style="width: 1%;">
-						<IMG src="img/calendar.gif" alt="">
-					</TD>
-					<TD style="width: 95%;">
-						<span class="lms-ui-date-period-container">
-							<strong>{trans("Period:")}</strong>
-							{date_period_preset from="#printbalancelist [name=\"balancefrom\"]" to="#printbalancelist [name=\"balanceto\"]"}
-							<span>{trans("From")}</span>
-							<input type="text" name="balancefrom" size="10" maxlength="10"
-								placeholder="{trans("yyyy/mm/dd")}"
-								{tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format or click to choose it from calendar"}>
-							<span>{trans("To")}</span>
-							<input type="text" name="balanceto" size="10" maxlength="10"
-								placeholder="{trans("yyyy/mm/dd")}"
-								{tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar"}>
-						</span>
-					</TD>
-				</TR>
-			</TABLE>
-		</TD>
-	</TR>
-	<tr>
-		<td class="lms-ui-box-buttons" colspan="2">
-			{button icon="csv" label="CSV" id="printbalancelist-csv"}
-			{button icon="print" label="Print" id="printbalancelist-print"}
-		</td>
-	</tr>
-    </TBODY>
-</TABLE>
-</FORM>
+<form method="post" name="printbalancelist" id="printbalancelist" action="?m=print&type=balancelist" target="_blank">
+	<input type="hidden" name="disposition" value="print">
+	<input type="submit" class="hiddenbtn">
+</form>
+<table class="lmsbox">
+	<colgroup>
+		<col style="width: 1%;">
+		<col style="width: 99%;">
+	</colgroup>
+	<thead>
+		<tr>
+			<th scope="col">
+				{icon name="money" class="fa-fw"}
+			</th>
+			<th scope="col" class="nobr">
+				<strong>{trans("Network Balance Sheet")}</strong>
+			</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td class="container" colspan="2">
+				<table>
+					<colgroup>
+						<col style="width: 1%;">
+						<col style="width: 1%;">
+						<col style="width: 1%;">
+						<col style="width: 1%;">
+						<col style="width: 96%;">
+					</colgroup>
+					<tr>
+						<td class="nobr">
+							<table>
+								<colgroup>
+									<col style="width: 1%;">
+									<col style="width: 1%;">
+									<col style="width: 98%;">
+								</colgroup>
+								<tbody>
+									<tr>
+										<td>
+											{icon name="user" class="fa-fw"}
+										</td>
+										<td class="nobr">
+											<strong>{trans("User")}</strong>
+										</td>
+										<td>
+											<select size="1" name="user" {tip text="You can select user to limit results"}
+												form="printbalancelist">
+												<option value="">{trans("— all users —")}</option>
+												{foreach $users as $user}
+													<option value="{$user.id}">{$user.name|trunescape:40}</option>
+												{/foreach}
+											</select>
+										</td>
+									</tr>
+									<tr>
+										<td>
+											{icon name="network" class="fa-fw"}
+										</td>
+										<td class="nobr">
+											<strong>{trans("Network")}</strong>
+										</td>
+										<td>
+											<select size="1" name="network" {tip text="Select network"}
+												form="printbalancelist">
+												<option value="0" selected>{trans("— all networks —")}</option>
+												{foreach $networks as $network}
+													<option value="{$network.id}">{$network.name|trunescape:40}</option>
+												{/foreach}
+											</select>
+										</td>
+									</tr>
+									<tr>
+										<td>
+											{icon name="division" class="fa-fw"}
+										</td>
+										<td class="nobr">
+											<strong>{trans("Division")}</strong>
+										</td>
+										<td class="nobr">
+											<select size="1" name="division" {tip text="Select division"}
+												form="printbalancelist">
+												<option value="0">{trans("— all —")}</option>
+												{foreach $divisions as $division}
+													<option value="{$division.id}">{$division.label|escape}</option>
+												{/foreach}
+											</select>
+										</td>
+									</tr>
+									<tr>
+										<td>
+											{icon name="customergroup" class="fa-fw"}
+										</td>
+										<td class="nobr">
+											<strong>{trans("Groups")}</strong>
+										</td>
+										<td>
+											<select size="1" name="customergroup[]" {tip class="lms-ui-multiselect" text="Select group"}
+												form="printbalancelist"
+												multiple data-default-value="{trans("— all groups —")}">
+												{foreach $customergroups as $customergroup}
+													<option value="{$customergroup.id}">{$customergroup.name|trunescape:40}</option>
+												{/foreach}
+											</select>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+						</td>
+						<td class="nobr">
+							<table>
+								<colgroup>
+									<col style="width: 1%;">
+									<col style="width: 1%;">
+									<col style="width: 98%;">
+								</colgroup>
+								<tbody>
+									<tr>
+										<td>
+											{icon name="money" class="fa-fw"}}
+										</td>
+										<td class="nobr">
+											<strong>{trans("Transaction type")}</strong>
+										</td>
+										<td class="multiselect">
+											<select name="types[]" class="lms-ui-multiselect" {tip text="Select transaction type"}
+												form="printbalancelist"
+												multiple data-default-value="{trans("— all types —")}">
+												<option value="1">{trans("Liability")}</option>
+												<option value="2">{trans("Income")}</option>
+												<option value="3">{trans("Expense")}</option>
+											</select>
+										</td>
+									</tr>
+									<tr>
+										<td>
+											{icon name="print" class="fa-fw"}
+										</td>
+										<td class="nobr">
+											<strong>{trans("Documents")}</strong>
+										</td>
+										<td>
+											<select size="1" name="docs" {tip text="Select transaction type"}
+												form="printbalancelist">
+												<option value="">{trans("— all —")}</option>
+												<option value="documented">{trans("with document")}</option>
+												<option value="notdocumented">{trans("without document")}</option>
+											</select>
+										</td>
+									</tr>
+									<tr>
+										<td>
+											{icon name="isource" class="fa-fw"}
+										</td>
+										<td class="nobr">
+											<strong>{trans("Source")}</strong>
+										</td>
+										<td>
+											<select size="1" name="source" {tip text="You can select import source to limit results"}
+												form="printbalancelist">
+												<option value="0">{trans("— all sources —")}</option>
+												<option value="-1">{trans("— none —")}</option>
+												{foreach $sourcelist as $item}
+													<option value="{$item.id}">{$item.name}</option>
+												{/foreach}
+											</select>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+						</td>
+						<td>
+							{icon name="calendar" class="fa-fw"}
+						</td>
+						<td>
+							<span class="lms-ui-date-period-container">
+								<strong>{trans("Period")}</strong>
+								{date_period_preset from="[form=\"printbalancelist\"][name=\"balancefrom\"]" to="[form=\"printbalancelist\"][name=\"balanceto\"]"}
+								<span>{trans("From")}</span>
+								<input type="text" name="balancefrom" size="10" maxlength="10"
+									form="printbalancelist"
+									placeholder="{trans("yyyy/mm/dd")}"
+									{tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format or click to choose it from calendar"}>
+								<span>{trans("To")}</span>
+								<input type="text" name="balanceto" size="10" maxlength="10"
+									form="printbalancelist"
+									placeholder="{trans("yyyy/mm/dd")}"
+									{tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar"}>
+							</span>
+						</td>
+					</tr>
+				</table>
+			</td>
+		</tr>
+		<tr>
+			<td class="lms-ui-box-buttons" colspan="2">
+				{button icon="csv" label="CSV" id="printbalancelist-csv"}
+				{button icon="print" label="Print" id="printbalancelist-print"}
+			</td>
+		</tr>
+	</tbody>
+</table>
+
 <script>
 
 	$(function() {
 		$('#printbalancelist-csv').click(function() {
-			$('#printbalancelist [name="disposition"]').val('csv');
+			$('[form="printbalancelist"][name="disposition"]').val('csv');
 			$('#printbalancelist').submit();
 		});
 
 		$('#printbalancelist-print').click(function() {
-			$('#printbalancelist [name="disposition"]').val('print');
+			$('[form="printbalancelist"][name="disposition"]').val('print');
 			$('#printbalancelist').submit();
 		});
 	});
