--- a/templates/default/print/printbalancelist.html
+++ b/templates/default/print/printbalancelist.html
@@ -5,7 +5,12 @@
 		<TD WIDTH="535" VALIGN="TOP">
 			<P class="hdf"><B>{$layout.pagetitle}</B>
 			{if $net}<BR><span class="sdr"><B>{trans("Network:")} {$net}</B></span>{/if}
-			{if $group}<BR><span class="sdr"><B>{trans("Group:")} {$group}</B></span>{/if}
+			{if !empty($groups)}
+				<br>
+				<span class="sdr">
+					<strong>{trans("Groups:")} {implode(', ', $groups)}</strong>
+				</span>
+			{/if}
 			{if $division}<BR><span class="sdr"><B>{trans("Division")}: {$division}</B></span>{/if}
 			{if $types}<BR><span class="sdr"><B>{trans("Type:")} {$types}</B></span>{/if}
 			{if $source}<BR><span class="sdr"><B>{trans("Source:")} {$source}</B></span>{/if}
