improvement: balance list report: allow to wrap customer data and don't limit customer name length

--- a/templates/default/print/printbalancelist.html
+++ b/templates/default/print/printbalancelist.html
@@ -90,8 +90,8 @@
 					{moneyf($item.after)}
 				{/if}
 			</TD>
-			<TD ALIGN="LEFT" NOWRAP>
-				<b>{$item.customername|trunescape:25}</b>
+			<TD ALIGN="LEFT">
+				<b>{$item.customername}</b>
 				{if !$hideid}(#{$item.customerid}){/if}
 				{if !$hideaddress}
 					<br>
