--- a/templates/default/customer/customerassignmentsedit.html
+++ b/templates/default/customer/customerassignmentsedit.html
@@ -191,6 +191,7 @@
 		selected: selected,
 		internetTariffType: {$smarty.const.SERVICE_INTERNET},
 		phoneTariffType: {$smarty.const.SERVICE_PHONE},
+		tvTariffType: {$smarty.const.SERVICE_TV},
 		DOC_DNOTE:{$smarty.const.DOC_DNOTE},
 		tariffTypes: tariffTypes,
 		variablePrefix: 'assignment',
