improvement: 'report other duct type as' form option which instructs how to transform 'other duct type' to uke well-known duct types ('uke.pit_report_other_duct_type_as' controls default value of new form option with default empty value preserving other duct type) (minor ui improvements)

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -2116,7 +2116,7 @@
 				{icon name="division" class="fa-fw"}
 			</td>
 			<td class="nobr">
-				<label for="uke-pit-division" class="lms-ui-disabled">
+				<label for="uke-pit-division">
 					<strong>{trans("Division")}</strong>
 				</label>
 			</td>
