--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -2195,6 +2195,20 @@
 		</tr>
 		<tr>
 			<td>
+				{icon name="wired" class="fa-fw"}
+			</td>
+			<td class="nobr">
+				<label for="uke-pit-complement-netlink-points">
+					<strong>{trans("<!uke-pit>Complement network link points")}</strong>
+				</label>
+			</td>
+			<td>
+				<input type="checkbox" name="complement-netlink-points" form="uke-pit"
+					id="uke-pit-complement-netlink-points" value="1" checked>
+			</td>
+		</tr>
+		<tr>
+			<td>
 				{icon name="location" class="fa-fw"}
 			</td>
 			<td class="nobr">
@@ -2277,7 +2291,7 @@
 		$('[name="report-type"]').change(function() {
 			var checked = $(this).prop('checked') && $(this).is('[value="customer-services"]');
 			$('#uke-pit-aggregate-customer-services').prop('disabled', !checked).closest('tr').find('label').toggleClass('lms-ui-disabled', !checked);
-			$('#uke-pit-report-other-duct-type-as').prop('disabled', checked).closest('tr').find('label').toggleClass('lms-ui-disabled', checked);
+			$('#uke-pit-report-other-duct-type-as,#uke-pit-complement-netlink-points').prop('disabled', checked).closest('tr').find('label').toggleClass('lms-ui-disabled', checked);
 		});
 	});
 
