improvement: uke/pit: 'complete breakdown points' option in report form - it can ease job of some ISPs

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -2198,13 +2198,13 @@
 				{icon name="wired" class="fa-fw"}
 			</td>
 			<td class="nobr">
-				<label for="uke-pit-complement-netlink-points">
-					<strong>{trans("<!uke-pit>Complement network link points")}</strong>
+				<label for="uke-pit-complete-breakdown-points">
+					<strong>{trans("<!uke-pit>Complete breakdown points of network connections")}</strong>
 				</label>
 			</td>
 			<td>
-				<input type="checkbox" name="complement-netlink-points" form="uke-pit"
-					id="uke-pit-complement-netlink-points" value="1" checked>
+				<input type="checkbox" name="complete-breakdown-points" form="uke-pit"
+					id="uke-pit-complete-breakdown-points" value="1" checked>
 			</td>
 		</tr>
 		<tr>
