--- a/templates/default/node/nodeinfobox.html
+++ b/templates/default/node/nodeinfobox.html
@@ -184,7 +184,7 @@
 													{if $nodeinfo.location_name}{$nodeinfo.location_name} ,{/if}{$nodeinfo.location}
 												{/if}
 												{if empty($nodeinfo.address_id)}
-													<span class="lms-ui-alert">{trans("<!node-address>(implicit)")}</span>
+													<span class="lms-ui-alert bold">{trans("<!node-address>(implicit)")}</span>
 												{/if}
 												</div>
 											</td>
