--- a/templates/default/netdev/netdevinfobox.html
+++ b/templates/default/netdev/netdevinfobox.html
@@ -158,6 +158,9 @@
 												{if $netdev.borough_name}
 													({$netdev.state_name} / {$netdev.district_name} / {$_BOROUGHTYPES[$netdev.borough_type]} {$netdev.borough_name})
 												{/if}
+												{if !empty($netdev.ownerid) && empty($netdev.address_id)}
+													<span class="lms-ui-alert bold">{trans("<!node-location>(implicit)")}</span>
+												{/if}
 											{else}
 												{$netdev.netnode.location}
 												{if $netdev.netnode.location_borough_name}
