improvement: uke/pit: valdate if detected flexibility point have defined feeding network node (check only points present in network structure - form option allows to control if this mechanism is active)

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -2195,6 +2195,20 @@
 		</tr>
 		<tr>
 			<td>
+				{icon name="network" class="fa-fw"}
+			</td>
+			<td class="nobr">
+				<label for="uke-pit-report-elements-outside-network-infrastructure">
+					<strong>{trans("<!uke-pit>Report elements outside network infrastructure")}</strong>
+				</label>
+			</td>
+			<td>
+				<input type="checkbox" name="report-elements-outside-network-infrastructure" form="uke-pit"
+					id="uke-pit-report-elements-outside-network-infrastructure" value="1" checked>
+			</td>
+		</tr>
+		<tr>
+			<td>
 				{icon name="wired" class="fa-fw"}
 			</td>
 			<td class="nobr">
