improvement: allow to check/uncheck all user resource permission to be copied from selected user with single click

--- a/templates/default/user/usercopypermissions.html
+++ b/templates/default/user/usercopypermissions.html
@@ -35,7 +35,7 @@
         $('.user-copy-permission').change(function() {
             var allChecks = $('.user-copy-permission');
             $('#user-copy-permissions-check-all').prop('checked', allChecks.length == allChecks.filter(':checked').length);
-        });
+        }).change();
     });
 
 </script>
