--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -294,6 +294,33 @@
   }
 }
 
+.lms-ui-icon-location-google {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-map-pin;
+  }
+}
+
+.lms-ui-icon-location-netstork {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-location-arrow;
+  }
+}
+
+.lms-ui-icon-location-geoportal {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-cube;
+  }
+}
+
 .lms-ui-icon-search {
   .fa-icon;
   .fas;
