--- a/templates/default/netdev/netdevinfobox.html
+++ b/templates/default/netdev/netdevinfobox.html
@@ -1,4 +1,18 @@
 <!--// $Id$ //-->
+
+<style>
+
+	.cell-flex {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	.cell-flex > *:not(:first-child) {
+		margin-left: 0.5em;
+	}
+
+</style>
+
 <table class="lmsbox{if $devicepanel} lms-ui-tab-container lms-ui-sortable{/if}" id="netdevinfobox"
 	{if $devicepanel} data-label="{trans("Network Device")}"{/if}>
     <colgroup>
@@ -215,18 +229,27 @@
 									<tr>
 										<td colspan="2">
 										</td>
-										<td>
-											{button type="link" icon="map" label="Show on map"
-												href="?m=netdevmap&netdevid={$netdev.id}"}
-										</td>
-									</tr>
-									<tr>
-										<td colspan="2">
-										</td>
-										<td>
-											{$gps_coordinate_url = ConfigHelper::getConfig('phpui.gps_coordinate_url', 'https://www.google.com/maps/search/?api=1&query=%latitude%2C%longitude')}
-											{button type="link" icon="location" label="Show on external map" external=true
-												href="{$gps_coordinate_url|replace:"%longitude":$longitude|replace:"%latitude":$latitude}"}
+										<td class="cell-flex">
+											{show_on_map_button
+												netdevid=$netdev.id}
+											{show_on_map_button
+												type="default"
+												latitude=$latitude
+												longitude=$longitude
+												external=true
+											}
+											{show_on_map_button
+												type="geoportal"
+												latitude=$latitude
+												longitude=$longitude
+												external=true
+											}
+											{show_on_map_button
+												type="netstork"
+												latitude=$latitude
+												longitude=$longitude
+												external=true
+											}
 										</td>
 									</tr>
 								{/if}
