enhancement: show Geoportal Maps and NetStorkWeb Maps links near gps coordinates and customer addresses (visual improvements)

--- a/templates/default/netdev/netdevinfobox.html
+++ b/templates/default/netdev/netdevinfobox.html
@@ -231,23 +231,27 @@
 										</td>
 										<td class="cell-flex">
 											{show_on_map_button
-												netdevid=$netdev.id}
+												netdevid=$netdev.id
+												label=true}
 											{show_on_map_button
 												type="default"
 												latitude=$latitude
 												longitude=$longitude
+												label=true
 												external=true
 											}
 											{show_on_map_button
 												type="geoportal"
 												latitude=$latitude
 												longitude=$longitude
+												label=true
 												external=true
 											}
 											{show_on_map_button
 												type="netstork"
 												latitude=$latitude
 												longitude=$longitude
+												label=true
 												external=true
 											}
 										</td>
