--- a/templates/default/netnode/netnodeinfobox.html
+++ b/templates/default/netnode/netnodeinfobox.html
@@ -133,18 +133,21 @@
 												type='google'
 												latitude=$nodeinfo.latitude
 												longitude=$nodeinfo.longitude
+												label=true
 												external=true
 											}
 											{show_on_map_button
 												type='geoportal'
 												latitude=$nodeinfo.latitude
 												longitude=$nodeinfo.longitude
+												label=true
 												external=true
 											}
 											{show_on_map_button
 												type='netstork'
 												latitude=$nodeinfo.latitude
 												longitude=$nodeinfo.longitude
+												label=true
 												external=true
 											}
 										</td>
