--- a/templates/default/node/nodeinfobox.html
+++ b/templates/default/node/nodeinfobox.html
@@ -468,23 +468,27 @@
 											</td>
 											<td class="cell-flex">
 												{show_on_map_button
-													nodeid=$nodeinfo.id}
+													nodeid=$nodeinfo.id
+													label=true}
 												{show_on_map_button
 													type="default"
 													latitude=$nodeinfo.latitude
 													longitude=$nodeinfo.longitude
+													label=true
 													external=true
 												}
 												{show_on_map_button
 													type="geoportal"
 													latitude=$nodeinfo.latitude
 													longitude=$nodeinfo.longitude
+													label=true
 													external=true
 												}
 												{show_on_map_button
 													type="netstork"
 													latitude=$nodeinfo.latitude
 													longitude=$nodeinfo.longitude
+													label=true
 													external=true
 												}
 											</td>
