--- a/templates/default/customer/customerinfobox.html
+++ b/templates/default/customer/customerinfobox.html
@@ -219,8 +219,12 @@
 															{$v.location|default:""|escape}
 														{/if}
 													</span>
-													<a href="{$gps_location_url|replace:"%location":$v.location|replace:"%state":$v.location_state_name|replace:"%city":$v.location_city_name|replace:"%zip":$v.location_zip|replace:"%street":$v.location_street_name|replace:"%full_street":$v.location_full_street_name|replace:"%full_reversed_street":$v.location_full_reversed_street_name|replace:"%short_street":$v.location_short_street_name|replace:"%house":$v.location_house|escape}"
-														title="{trans("Show on map")}">{icon name="location"}</a>
+													{button
+														type="link"
+														tip="Show on map"
+														icon="location"
+														href="{$gps_location_url|replace:"%location":$v.location|replace:"%state":$v.location_state_name|replace:"%city":$v.location_city_name|replace:"%zip":$v.location_zip|replace:"%street":$v.location_street_name|replace:"%full_street":$v.location_full_street_name|replace:"%full_reversed_street":$v.location_full_reversed_street_name|replace:"%short_street":$v.location_short_street_name|replace:"%house":$v.location_house|escape}"
+													}
 													{show_on_map_button
 														type="default"
 														cityid=$v.location_city
@@ -274,8 +278,12 @@
 															{$v.location|escape}
 														{/if}
 													</span>
-													<a href="{$gps_location_url|replace:"%location":$v.location|replace:"%state":$v.location_state_name|replace:"%city":$v.location_city_name|replace:"%zip":$v.location_zip|replace:"%street":$v.location_street_name|replace:"%full_street":$v.location_full_street_name|replace:"%full_reversed_street":$v.location_full_reversed_street_name|replace:"%short_street":$v.location_short_street_name|replace:"%house":$v.location_house|escape}"
-														title="{trans("Show on map")}">{icon name="location"}</a>
+													{button
+														type="link"
+														tip="Show on map"
+														icon="location"
+														href="{$gps_location_url|replace:"%location":$v.location|replace:"%state":$v.location_state_name|replace:"%city":$v.location_city_name|replace:"%zip":$v.location_zip|replace:"%street":$v.location_street_name|replace:"%full_street":$v.location_full_street_name|replace:"%full_reversed_street":$v.location_full_reversed_street_name|replace:"%short_street":$v.location_short_street_name|replace:"%house":$v.location_house|escape}"
+													}
 													{show_on_map_button
 														type="default"
 														cityid=$v.location_city
@@ -337,8 +345,12 @@
 															{$v.location|default:""|escape}
 														{/if}
 													</span>
-													<a href="{$gps_location_url|replace:"%location":$v.location|replace:"%state":$v.location_state_name|replace:"%city":$v.location_city_name|replace:"%zip":$v.location_zip|replace:"%street":$v.location_street_name|replace:"%full_street":$v.location_full_street_name|replace:"%full_reversed_street":$v.location_full_reversed_street_name|replace:"%short_street":$v.location_short_street_name|replace:"%house":$v.location_house|escape}"
-														title="{trans("Show on map")}">{icon name="location"}</a>
+													{button
+														type="link"
+														tip="Show on map"
+														icon="location"
+														href="{$gps_location_url|replace:"%location":$v.location|replace:"%state":$v.location_state_name|replace:"%city":$v.location_city_name|replace:"%zip":$v.location_zip|replace:"%street":$v.location_street_name|replace:"%full_street":$v.location_full_street_name|replace:"%full_reversed_street":$v.location_full_reversed_street_name|replace:"%short_street":$v.location_short_street_name|replace:"%house":$v.location_house|escape}"
+													}
 													{show_on_map_button
 														type="default"
 														cityid=$v.location_city
