improvement: added ui option to allow easily check all promotion/schema attachments with single click

--- a/templates/default/customer/customerassignmenthelper.html
+++ b/templates/default/customer/customerassignmenthelper.html
@@ -136,6 +136,11 @@
 		padding-inline-start: 0;
 	}
 
+	.multi-check-all-label {
+		display: block;
+		padding-top: 0.5em;
+	}
+
 	.price-variants .lms-ui-box {
 		display: flex;
 		border: 1px dotted black;
