enhancement: implemented validity intervals for numbering plans (better form field names)

--- a/templates/default/numberplan/numberplanadd.html
+++ b/templates/default/numberplan/numberplanadd.html
@@ -118,7 +118,7 @@
 				{icon name="calendar"}
 			</td>
 			<td>
-				<strong>{trans("Date interval")}</strong>
+				<strong>{trans("<!numberplan>Valid")}</strong>
 			</td>
 			<td>
 				{trans("from")}
