--- a/templates/default/numberplan/numberplanedit.html
+++ b/templates/default/numberplan/numberplanedit.html
@@ -117,7 +117,7 @@
 				{icon name="calendar"}
 			</td>
 			<td>
-				<strong>{trans("Date interval")}</strong>
+				<strong>{trans("<!numberplan>Valid")}</strong>
 			</td>
 			<td>
 				{trans("from")}
