enhancement: implemented validity intervals for numbering plans (better form field names)

--- a/templates/default/numberplan/numberplanedit.html
+++ b/templates/default/numberplan/numberplanedit.html
@@ -117,7 +117,7 @@
 				{icon name="calendar"}
 			</td>
 			<td>
-				<strong>{trans("<!numberplan>Valid")}</strong>
+				<strong>{trans("Validity period")}</strong>
 			</td>
 			<td>
 				{trans("from")}
