--- a/templates/default/numberplan/numberplanlist.html
+++ b/templates/default/numberplan/numberplanlist.html
@@ -35,7 +35,7 @@
 				</strong>
 				<br>
 				{icon name="calendar"}
-				{trans("<!numberplan>Valid")}
+				{trans("Validity period")}
 			</td>
 			<td class="text-right nobr">{trans("ID")}</td>
 			<td class="text-right nobr">{trans("Example (next) number")}</td>
