enhancement: don't show customer sensible data for regular users and store all requested views of such users in transaction log; new permission 'customer_sensible_data' allows to disable this mechanism for selected users

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -1446,7 +1446,10 @@
 }
 
 .lms-ui-icon-password,
-.lms-ui-icon-lastloggedin {
+.lms-ui-icon-lastloggedin
+.lms-ui-icon-key,
+.lms-ui-icon-sensible,
+.lms-ui-icon-sensible-data {
   .fa-icon;
   .fas;
   .lms-ui-icon;
